Fix extra padding on sections

--- a/css/iwamaaikido.css
+++ b/css/iwamaaikido.css
@@ -49,7 +49,7 @@ header {
 }
 
 section {
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 @media (max-width: 767px) {
